--- a/DataSharing.bib
+++ b/DataSharing.bib
@@ -6,6 +6,34 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{baggerly2010disclose,
+  title={Disclose all data in publications},
+  author={Baggerly, Keith},
+  journal={Nature},
+  volume={467},
+  number={7314},
+  pages={401},
+  year={2010}
+}
+
+@article{leek2015opinion,
+  title={Opinion: Reproducible research can still be wrong: Adopting a prevention approach},
+  author={Leek, Jeffrey T and Peng, Roger D},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={112},
+  number={6},
+  pages={1645--1646},
+  year={2015},
+  publisher={National Acad Sciences}
+}
+
+
+@article{leek2015elements,
+  title={The Elements of Data Analytic Style},
+  author={Leek, Jeff},
+  journal={A guide for people who want to analyze data},
+  year={2015}
+}
 
 
 @misc{_r,
