--- a/DataSharing.bib
+++ b/DataSharing.bib
@@ -1,44 +1,47 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Shannon Ellis at 2017-02-21 10:53:38 -0500 
+%% Created for Shannon Ellis at 2017-02-21 15:59:20 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+
+
 @article{baggerly2010disclose,
-  title={Disclose all data in publications},
-  author={Baggerly, Keith},
-  journal={Nature},
-  volume={467},
-  number={7314},
-  pages={401},
-  year={2010}
-}
+	Author = {Baggerly, Keith},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
+	Journal = {Nature},
+	Number = {7314},
+	Pages = {401},
+	Title = {Disclose all data in publications},
+	Volume = {467},
+	Year = {2010}}
 
 @article{leek2015opinion,
-  title={Opinion: Reproducible research can still be wrong: Adopting a prevention approach},
-  author={Leek, Jeffrey T and Peng, Roger D},
-  journal={Proceedings of the National Academy of Sciences},
-  volume={112},
-  number={6},
-  pages={1645--1646},
-  year={2015},
-  publisher={National Acad Sciences}
-}
-
+	Author = {Leek, Jeffrey T and Peng, Roger D},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
+	Journal = {Proceedings of the National Academy of Sciences},
+	Number = {6},
+	Pages = {1645--1646},
+	Publisher = {National Acad Sciences},
+	Title = {Opinion: Reproducible research can still be wrong: Adopting a prevention approach},
+	Volume = {112},
+	Year = {2015}}
 
 @article{leek2015elements,
-  title={The Elements of Data Analytic Style},
-  author={Leek, Jeff},
-  journal={A guide for people who want to analyze data},
-  year={2015}
-}
-
+	Author = {Leek, Jeff},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
+	Journal = {A guide for people who want to analyze data},
+	Title = {The Elements of Data Analytic Style},
+	Year = {2015}}
 
 @misc{_r,
-	Date-Added = {2017-02-21 15:42:27 +0000},
-	Date-Modified = {2017-02-21 15:42:27 +0000},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	File = {R\: The R Project for Statistical Computing:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/5DKXWV53/www.r-project.org.html:text/html},
 	Title = {R: {The} {R} {Project} for {Statistical} {Computing}},
 	Url = {https://www.r-project.org/},
@@ -47,8 +50,8 @@
 
 @article{_tidy_data,
 	Author = {Hadley Wickham},
-	Date-Added = {2017-02-21 15:31:27 +0000},
-	Date-Modified = {2017-02-21 15:50:11 +0000},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	File = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/ZFSPBASK/v059i10.html:text/html},
 	Journal = {Journal of Statistical Software},
 	Number = {10},
@@ -61,7 +64,8 @@
 
 @misc{_data_org,
 	Author = {Karl Broman},
-	Date-Modified = {2017-02-21 15:35:41 +0000},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	File = {data organization:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/ENT87QXB/dataorg.html:text/html},
 	Title = {data organization},
 	Url = {http://kbroman.org/dataorg/},
@@ -72,6 +76,8 @@
 	Abstract = {We present a set of computing tools and techniques that every researcher can and should adopt. These recommendations synthesize inspiration from our own work, from the experiences of the thousands of people who have taken part in Software Carpentry and Data Carpentry workshops over the past six years, and from a variety of other guides. Unlike some other guides, our recommendations are aimed specifically at people who are new to research computing.},
 	Annote = {Comment: 19 pages, 1 figure},
 	Author = {Wilson, Greg and Bryan, Jennifer and Cranston, Karen and Kitzes, Justin and Nederbragt, Lex and Teal, Tracy K.},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	File = {arXiv\:1609.00037 PDF:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/UJKU9XP2/Wilson et al. - 2016 - Good Enough Practices in Scientific Computing.pdf:application/pdf;arXiv.org Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/JKNZ6UVU/1609.html:text/html},
 	Journal = {arXiv:1609.00037 [cs]},
 	Keywords = {Computer Science - Software Engineering},
@@ -84,7 +90,8 @@
 	Bdsk-Url-1 = {http://arxiv.org/abs/1609.00037}}
 
 @misc{_jtleek,
-	Date-Modified = {2017-02-21 15:38:33 +0000},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	File = {jtleek · Leek Group:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/DR3NVCUB/jtleek.com.html:text/html},
 	Title = {Leek Group},
 	Url = {http://jtleek.com/},
@@ -94,6 +101,8 @@
 @misc{_binary_2017,
 	Abstract = {A binary file is a computer file that is not a text file. The term "binary file" is often used as a term meaning "non-text file". Many binary file formats contain parts that can be interpreted as text; for example, some computer document files containing formatted text, such as older Microsoft Word document files, contain the text of the document but also contain formatting information in binary form.},
 	Copyright = {Creative Commons Attribution-ShareAlike License},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	File = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/DTQEVQKP/index.html:text/html},
 	Journal = {Wikipedia},
 	Language = {en},
@@ -110,6 +119,8 @@
 JSON is a language-independent data format. It derives from JavaScript, but as of 2017 many programming languages include code to generate and parse JSON-format data. The official Internet media type for JSON is application/json. JSON filenames use the extension .json.
 Douglas Crockford originally specified the JSON format in the early 2000s; two competing standards, RFC 7159 and ECMA-404, defined it in 2013. The ECMA standard describes only the allowed syntax, whereas the RFC covers some security and interoperability considerations.},
 	Copyright = {Creative Commons Attribution-ShareAlike License},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	File = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/9SF3KSG4/index.html:text/html},
 	Journal = {Wikipedia},
 	Language = {en},
@@ -122,7 +133,8 @@ Douglas Crockford originally specified the JSON format in the early 2000s; two c
 	Bdsk-Url-1 = {https://en.wikipedia.org/w/index.php?title=JSON&oldid=766299361}}
 
 @misc{_twitter,
-	Date-Modified = {2017-02-21 15:39:39 +0000},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	File = {Twitter API (@twitterapi) | Twitter:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/KFGVIMK2/twitterapi.html:text/html},
 	Title = {Twitter {API} (@twitterapi) {\textbar} {Twitter}},
 	Url = {https://twitter.com/twitterapi},
@@ -130,20 +142,22 @@ Douglas Crockford originally specified the JSON format in the early 2000s; two c
 	Bdsk-Url-1 = {https://twitter.com/twitterapi}}
 
 @misc{_hadley,
-	Date-Modified = {2017-02-21 15:39:43 +0000},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	File = {Hadley Wickham:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/39M5TQ6C/hadley.nz.html:text/html},
 	Title = {Hadley {Wickham}},
 	Url = {http://hadley.nz/},
 	Urldate = {2017-02-21},
 	Bdsk-Url-1 = {http://hadley.nz/}}
 
-@electronic{_tidy_video,
+@misc{_tidy_video,
 	Abstract = {This presentation was given to the NYC Open Statistical Computing Meetup by Hadley Wickham, Assistant Professor of Statistics at Rice University, and creator of{\ldots}},
 	Author = {Hadley Wickham},
-	Date-Modified = {2017-02-21 15:53:32 +0000},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:57:56 +0000},
 	File = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/F3E72PQT/33727555.html:text/html},
 	Journal = {Vimeo},
-	Title = {Tidy Data},
+	Title = {Tidy Data & Tidy Tools},
 	Url = {https://vimeo.com/33727555},
 	Urldate = {2017-02-21},
 	Bdsk-Url-1 = {https://vimeo.com/33727555}}
@@ -153,6 +167,8 @@ Douglas Crockford originally specified the JSON format in the early 2000s; two c
 The CSV file format is not standardized. The basic idea of separating fields with a comma is clear, but that idea gets complicated when the field data may also contain commas or even embedded line-breaks. CSV implementations may not handle such field data, or they may use quotation marks to surround the field. Quotation does not solve everything: some fields may need embedded quotation marks, so a CSV implementation may include escape characters or escape sequences.
 In addition, the term "CSV" also denotes some closely related delimiter-separated formats that use different field delimiters. These include tab-separated values and space-separated values. A delimiter that is not present in the field data (such as tab) keeps the format parsing simple. These alternate delimiter-separated files are often even given a .csv extension despite the use of a non-comma field separator. This loose terminology can cause problems in data exchange. Many applications that accept CSV files have options to select the delimiter character and the quotation character.},
 	Copyright = {Creative Commons Attribution-ShareAlike License},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	File = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/W8ACSU83/index.html:text/html},
 	Journal = {Wikipedia},
 	Language = {en},
@@ -169,6 +185,8 @@ In addition, the term "CSV" also denotes some closely related delimiter-separate
 TSV is a simple file format that is widely supported, so it is often used in data exchange to move tabular data between different computer programs that support the format. For example, a TSV file might be used to transfer information from a database program to a spreadsheet.
 TSV is an alternative to the common comma-separated values (CSV) format, which often causes difficulties because of the need to escape commas -- literal commas are very common in text data, but literal tab stops are infrequent in running text. The IANA standard for TSV achieves simplicity by simply disallowing tabs within fields.},
 	Copyright = {Creative Commons Attribution-ShareAlike License},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	File = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/CNTTVDEW/index.html:text/html},
 	Journal = {Wikipedia},
 	Language = {en},
@@ -184,6 +202,8 @@ TSV is an alternative to the common comma-separated values (CSV) format, which o
 	Abstract = {When processing microarray data sets, we recently noticed that some gene names were being changed inadvertently to non-gene names.},
 	Annote = {Pages 80 in PDF},
 	Author = {Zeeberg, Barry R. and Riss, Joseph and Kane, David W. and Bussey, Kimberly J. and Uchio, Edward and Linehan, W. Marston and Barrett, J. Carl and Weinstein, John N.},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	Doi = {10.1186/1471-2105-5-80},
 	File = {Full Text PDF:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/3FKMP9FB/Zeeberg et al. - 2004 - Mistaken Identifiers Gene name errors can be intr.pdf:application/pdf;Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/PFPXG5N6/1471-2105-5-80.html:text/html},
 	Issn = {1471-2105},
@@ -202,6 +222,8 @@ TSV is an alternative to the common comma-separated values (CSV) format, which o
 In general, ISO 8601 applies to representations and formats of dates in the Gregorian (and potentially proleptic Gregorian) calendar, times based on the 24-hour timekeeping system (including optional time zone information), time intervals and combinations thereof. The standard does not assign any specific meaning to elements of the date/time to be represented; the meaning will depend on the context of its use. In addition, dates and times to be represented cannot include words with no specified numerical meaning in the standard (e.g., names of years in the Chinese calendar) or that do not use characters (e.g., images, sounds).
 In representations for interchange, dates and times are arranged so the largest temporal term (the year) is placed to the left and each successively smaller term is placed to the right of the previous term. Representations must be written in a combination of Arabic numerals and certain characters (such as "-", ":", "T", "W", and "Z") that are given specific meanings within the standard; the implication is that some commonplace ways of writing parts of dates, such as "January" or "Thursday", are not allowed in interchange representations.},
 	Copyright = {Creative Commons Attribution-ShareAlike License},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	File = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/4CXFAEMN/index.html:text/html},
 	Journal = {Wikipedia},
 	Language = {en},
@@ -220,6 +242,8 @@ Because variables conforming only to nominal or ordinal measurements cannot be r
 Other categorizations have been proposed. For example, Mosteller and Tukey (1977) distinguished grades, ranks, counted fractions, counts, amounts, and balances. Nelder (1990) described continuous counts, continuous ratios, count ratios, and categorical modes of data. See also Chrisman (1998), van den Berg (1991).
 The issue of whether or not it is appropriate to apply different kinds of statistical methods to data obtained from different kinds of measurement procedures is complicated by issues concerning the transformation of variables and the precise interpretation of research questions. "The relationship between the data and what they describe merely reflects the fact that certain kinds of statistical statements may have truth values which are not invariant under some transformations. Whether or not a transformation is sensible to contemplate depends on the question one is trying to answer" (Hand, 2004, p. 82).},
 	Copyright = {Creative Commons Attribution-ShareAlike License},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	File = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/ZZTU4IU6/index.html:text/html},
 	Journal = {Wikipedia},
 	Language = {en},
@@ -236,6 +260,8 @@ The issue of whether or not it is appropriate to apply different kinds of statis
 A variable, the data on which are ordinal, is known as an ordinal variable. In regression analysis, outcomes (dependent variables) that are ordinal variables can be predicted using a variant of ordinal regression, such as ordered logit or ordered probit.
 Examples of ordinal data are often found in questionnaires: for example, the survey question "Is your general health poor, reasonable, good, or excellent?" may have those answers coded respectively as 1, 2, 3, and 4. Sometimes data on an interval scale or ratio scale are grouped onto an ordinal scale: for example, individuals whose income is known might be grouped into the income categories \$0-\$19,999, \$20,000-\$39,999, \$40,000-\$59,999, ..., which then might be coded as 1, 2, 3, 4, ....},
 	Copyright = {Creative Commons Attribution-ShareAlike License},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	File = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/ZCNRZ5S2/index.html:text/html},
 	Journal = {Wikipedia},
 	Language = {en},
@@ -252,6 +278,8 @@ Examples of ordinal data are often found in questionnaires: for example, the sur
 Categorical data is the statistical data type consisting of categorical variables or of data that has been converted into that form, for example as grouped data. More specifically, categorical data may derive from either or both of observations made of qualitative data, where the observations are summarised as counts or cross tabulations, or of quantitative data, where observations might be directly observed counts of events happening or might be counts of values that occur within given intervals. Often, purely categorical data are summarised in the form of a contingency table. However, particularly when considering data analysis, it is common to use the term "categorical data" to apply to data sets that, while containing some categorical variables, may also contain non-categorical variables.
 A categorical variable that can take on exactly two values is termed a binary variable or dichotomous variable; an important special case is the Bernoulli variable. Categorical variables with more than two possible values are called polytomous variables; categorical variables are often assumed to be polytomous unless otherwise specified. Discretization is treating continuous data as if it were categorical. Dichotomization is treating continuous data or polytomous variables as if they were binary variables. Regression analysis often treats category membership as a quantitative dummy variable.},
 	Copyright = {Creative Commons Attribution-ShareAlike License},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	File = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/MWEJ5WH8/index.html:text/html},
 	Journal = {Wikipedia},
 	Language = {en},
@@ -269,6 +297,8 @@ Missing data can occur because of nonresponse: no information is provided for on
 Data often are missing in research in economics, sociology, and political science because governments choose not to, or fail to, report critical statistics. Sometimes missing values are caused by the researcher---for example, when data collection is done improperly or mistakes are made in data entry.
 These forms of missingness take different types, with different impacts on the validity of conclusions from research: Missing completely at random, missing at random, and missing not at random.},
 	Copyright = {Creative Commons Attribution-ShareAlike License},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	File = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/NZ5Q7J5D/index.html:text/html},
 	Journal = {Wikipedia},
 	Language = {en},
@@ -287,6 +317,8 @@ Censoring also occurs when a value occurs outside the range of a measuring instr
 The problem of censored data, in which the observed value of some variable is partially known, is related to the problem of missing data, where the observed value of some variable is unknown.
 Censoring should not be confused with the related idea truncation. With censoring, observations result either in knowing the exact value that applies, or in knowing that the value lies within an interval. With truncation, observations never result in values outside a given range: values in the population outside the range are never seen or never recorded if they are seen. Note that in statistics, truncation is not the same as rounding.},
 	Copyright = {Creative Commons Attribution-ShareAlike License},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	File = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/2APEDZQX/index.html:text/html},
 	Journal = {Wikipedia},
 	Language = {en},
@@ -301,6 +333,8 @@ Censoring should not be confused with the related idea truncation. With censorin
 @misc{_imputation_2017,
 	Abstract = {In statistics, imputation is the process of replacing missing data with substituted values. When substituting for a data point, it is known as "unit imputation"; when substituting for a component of a data point, it is known as "item imputation". There are three main problems that missing data causes: missing data can introduce a substantial amount of bias, make the handling and analysis of the data more arduous, and create reductions in efficiency. Because missing data can create problems for analyzing data, imputation is seen as a way to avoid pitfalls involved with listwise deletion of cases that have missing values. That is to say, when one or more values are missing for a case, most statistical packages default to discarding any case that has a missing value, which may introduce bias or affect the representativeness of the results. Imputation preserves all cases by replacing missing data with an estimated value based on other available information. Once all missing values have been imputed, the data set can then be analysed using standard techniques for complete data. Imputation theory is constantly developing and thus requires consistent attention to new information regarding the subject. There have been many theories embraced by scientists to account for missing data but the majority of them introduce large amounts of bias. A few of the well known attempts to deal with missing data include: hot deck and cold deck imputation; listwise and pairwise deletion; mean imputation; regression imputation; last observation carried forward; stochastic imputation; and multiple imputation.},
 	Copyright = {Creative Commons Attribution-ShareAlike License},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	File = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/C8IQ4K4A/index.html:text/html},
 	Journal = {Wikipedia},
 	Language = {en},
@@ -316,6 +350,8 @@ Censoring should not be confused with the related idea truncation. With censorin
 	Abstract = {Computational science has led to exciting new developments, but the nature of the work has exposed limitations in our ability to evaluate published findings. Reproducibility has the potential to serve as a minimum standard for judging scientific claims when full independent replication of a study is not possible.},
 	Author = {Peng, Roger D.},
 	Copyright = {Copyright {\copyright} 2011, American Association for the Advancement of Science},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	Doi = {10.1126/science.1213847},
 	File = {Full Text PDF:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/ZXWVMUE2/Peng - 2011 - Reproducible Research in Computational Science.pdf:application/pdf;Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/FRJAJ8S7/1226.html:text/html},
 	Issn = {0036-8075, 1095-9203},
@@ -338,6 +374,8 @@ Censoring should not be confused with the related idea truncation. With censorin
 It uses the structural conventions of a normal programming language, but is intended for human reading rather than machine reading. Pseudocode typically omits details that are essential for machine understanding of the algorithm, such as variable declarations, system-specific code and some subroutines. The programming language is augmented with natural language description details, where convenient, or with compact mathematical notation. The purpose of using pseudocode is that it is easier for people to understand than conventional programming language code, and that it is an efficient and environment-independent description of the key principles of an algorithm. It is commonly used in textbooks and scientific publications that are documenting various algorithms, and also in planning of computer program development, for sketching out the structure of the program before the actual coding takes place.
 No standard for pseudocode syntax exists, as a program in pseudocode is not an executable program. Pseudocode resembles, but should not be confused with skeleton programs which can be compiled without errors. Flowcharts, drakon-charts and Unified Modeling Language (UML) charts can be thought of as a graphical alternative to pseudocode, but are more spacious on paper. Languages such as HAGGIS bridge the gap between pseudocode and code written on programming languages. Its main use is to introduce students to high level languages through use of this hybrid language.},
 	Copyright = {Creative Commons Attribution-ShareAlike License},
+	Date-Added = {2017-02-21 20:56:03 +0000},
+	Date-Modified = {2017-02-21 20:56:03 +0000},
 	File = {Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/3T8UN3IK/index.html:text/html},
 	Journal = {Wikipedia},
 	Language = {en},
