fixing formatting (#1) ; removing / (#3)

--- a/DataSharing.bib
+++ b/DataSharing.bib
@@ -8,6 +8,13 @@
 
 
 
+@misc{noauthor_twitter_nodate,
+	title = {Twitter},
+	url = {https://twitter.com/},
+	urldate = {2017-05-03},
+	file = {Twitter:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/UUJRBJCE/twitter.com.html:text/html}
+}
+
 @article{baggerly2010disclose,
 	Author = {Baggerly, Keith},
 	Date-Added = {2017-02-21 20:56:03 +0000},
