--- a/README_SE.Rmd
+++ b/README_SE.Rmd
@@ -6,8 +6,7 @@ output: github_document
 ---
 
 
-1. Introduction
-===========
+## 1. Introduction
 
 A set of general principles for sharing data have emerged within the statistics community [@_data_org; @_tidy_data; @wilson_good_2016]. But these principles are not always clear to researchers, scientists, or collaborators generating the data. This has led to a disconnect between those generating data and those analyzing it about the best way for data to be shared. To bridge this divide, we have developed general guidelines for anyone generating data who anticipates their data will be shared with a statistician, data scientist, or analyst at some point during their project. The goals of this guide are to provide some instruction on the best way to share data to avoid the most common pitfalls and sources of delay in the transition from data collection to data analysis [@leek2015opinion]. 
 
@@ -24,8 +23,8 @@ We provide these guidelines on data sharing and explain the reasoning behind the
 
 
 
-2. What you should deliver to the statistician
-====================
+## 2. What you should deliver to the statistician
+
 
 To facilitate the most efficient and timely analysis this is the information you should pass to a statistician:
 
@@ -113,8 +112,7 @@ Alternatively, in many cases, the person who collected the data may not know how
 
 You should also include information about which system (Mac/Windows/Linux) you used the software on, the specific version of any software used, and whether you tried it more than once to confirm it gave the same results. Ideally, you will run this by a fellow student or labmate to confirm that they can obtain the same output file you did. 
 
-3. What you should expect from the analyst
-====================
+## 3. What you should expect from the analyst
 
 When you turn over a properly tidied data set it dramatically decreases the workload on the statistician and minimizes the likelihood of errors during analysis. By taking the time to tidy the data, the data generator, who knows the details of the data generated better than anyone else, can expect to get the analysis back sooner and can be more confident in its accuracy. Careful statisticians will check your recipe, ask questions about steps you performed, and try to confirm that they can obtain the same tidy data that you did with, at minimum, spot checks.
 
@@ -126,24 +124,22 @@ You should then expect from the statistician:
 
 This is the information you will use in the supplement to establish reproducibility and precision of your results. Each of the steps in the analysis should be clearly explained and you should ask questions when you don't understand what the analyst did. It is the responsibility of both the statistician and the scientist to understand the statistical analysis. You may not be able to perform the exact analyses without the statistician's code, but you should be able to explain why the statistician performed each step to a labmate or your principal investigator. 
 
-4. Discussion
-====================
+## 4. Discussion
 These guidelines aim to provide guidelines for effective and efficient data sharing between those generating data and those analyzing it. We highlight the need for data generators to (1) provide data in a tidy and consistently coded format, (2) include all the necessary experimental information regarding data generation, and (3) to explain any steps taken to pre-process the data. If followed, these guidelines will both speed up analysis turnaround time and minimize the likelihood of errors during analysis. 
 
 
-Acknowledgments
-====================
+## Acknowledgments
+
 We want to thank Jenny Bryan and the referees, Nicholas Horton and Stephen Turner, for their helpful contributions and edits. We would additionally like to thank Foram Ashar, Pat Carlson, Claude Chaunier, Leonardo Collado-Torres, Dan Fowler, David Jankoski, Sean Kross, Gene Miller, Leslie Myint, and Nick Reich for their suggestions and edits.
 
-Funding
-====================
+## Funding
 This work was supported by NIH R01 GM105705.
 
 
-Figure Legends
-====================
+## Figure Legends
+
 **Figure 1** -- **A. Raw (and tidy) data.** The raw measurements taken during the experiment are included here for the 40 patients (rows) and 20 hormones (columns) measured. Indicating that these are raw values conveys that no manipulation or computation has been done on the included values.  **B. Tidy data.** These data convey the important clinical information to your statistician for each sample (rows) across a number of variables (columns).  With a single value included in each cell and consistently and informatively named column headers and values, these tidy data can be easily understood and used by your statistician. Importantly, `PatientID` is coded in the exact same way between Hormone_Data_raw.csv and Demographic_Data.csv enabling easy merging by the statistician. **C. Code Book.** Here, all pertinent and detailed information about both the experiment and the data are conveyed to the statistician. This is the place for any extra detail that does not fit into the data generator’s tidy data tables or spreadsheets. **D. Pseudocode.** This includes information about any processing steps taken to get the data into the form in which the statistician is receiving it. 
 
-# References
+## References
 
 
