--- a/DataSharing.bib
+++ b/DataSharing.bib
@@ -7,6 +7,23 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+@article{white_nine_2013,
+	title = {Nine simple ways to make it easier to (re)use your data},
+	volume = {6},
+	copyright = {Copyright (c) 2015 Ethan P White, Elita Baldridge, Zachary T. Brym, Kenneth J. Locey, Daniel J. McGlinn, Sarah R. Supp},
+	issn = {1918-3178},
+	url = {http://ojs.library.queensu.ca/index.php/IEE/article/view/4608},
+	abstract = {Sharing data is increasingly considered to be an important part of the scientific process. Making your data publicly available allows original results to be reproduced and new analyses to be conducted. While sharing your data is the first step in allowing reuse, it is also important that the data be easy to understand and use. We describe nine simple ways to make it easy to reuse the data that you share and also make it easier to work with it yourself. Our recommendations focus on making your data understandable, easy to analyze, and readily available to the wider community of scientists.},
+	language = {en},
+	number = {2},
+	urldate = {2017-05-11},
+	journal = {Ideas in Ecology and Evolution},
+	author = {White, Ethan P. and Baldridge, Elita and Brym, Zachary T. and Locey, Kenneth J. and McGlinn, Daniel J. and Supp, Sarah R.},
+	month = aug,
+	year = {2013},
+	keywords = {data, data reuse, data sharing, data structure},
+	file = {Full Text PDF:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/AQWSWRBH/White et al. - 2013 - Nine simple ways to make it easier to (re)use your.pdf:application/pdf;Snapshot:/Users/shannonellis/Library/Application Support/Zotero/Profiles/kgtfszi4.default/zotero/storage/M4C4ABP7/0.html:text/html}
+}
 
 @misc{noauthor_twitter_nodate,
 	title = {Twitter},
