--- a/README_SE.Rmd
+++ b/README_SE.Rmd
@@ -8,7 +8,7 @@ output: github_document
 
 ## 1. Introduction
 
-A set of general principles for sharing data have emerged within the statistics community [@_data_org; @_tidy_data; @wilson_good_2016]. But these principles are not always clear to researchers, scientists, or collaborators generating the data. This has led to a disconnect between those generating data and those analyzing it about the best way for data to be shared. To bridge this divide, we have developed general guidelines for anyone generating data who anticipates their data will be shared with a statistician, data scientist, or analyst at some point during their project. The goals of this guide are to provide some instruction on the best way to share data to avoid the most common pitfalls and sources of delay in the transition from data collection to data analysis [@leek2015opinion]. This guide focuses on data sharing between collaborators and does not directly address best practices for how to make the data behind a published paper available in public repositories. While we do not focus on the pitfalls and specific requirements of that process here, following many of the guidelines we present will be critical during that process as well.
+A set of general principles for sharing data have emerged within the statistics community [@_data_org; @_tidy_data; @wilson_good_2016; @white_nine_2013]. But these principles are not always clear to researchers, scientists, or collaborators generating the data. This has led to a disconnect between those generating data and those analyzing it about the best way for data to be shared. To bridge this divide, we have developed general guidelines for anyone generating data who anticipates their data will be shared with a statistician, data scientist, or analyst at some point during their project. The goals of this guide are to provide some instruction on the best way to share data to avoid the most common pitfalls and sources of delay in the transition from data collection to data analysis [@leek2015opinion]. This guide focuses on data sharing between collaborators and does not directly address best practices for how to make the data behind a published paper available in public repositories. While we do not focus on the pitfalls and specific requirements of that process here, following many of the guidelines we present will be critical during that process as well.
 
 When it comes to collaborations between data collectors and statisticians, it is a reasonable expectation that the statistician should be able to handle and analyze the data in whatever state they arrive. For this to be possible, the statistician must be provided the raw data, information on any steps taken to preprocess the data, and enough information about the experimental conditions to allow the statistician to identify and incorporate hidden sources of variability into his or her analysis [@baggerly2010disclose]. On the data generator's end, it can be expected that he or she will receive results from a statistician in a reasonable amount of time. From our experience in the Leek group [@_jtleek] (where we work with a large number of collaborators to analyze data) and from conversations with other statisticians, the number one source of delay in the speed of returning results to collaborators is the condition of the data when they arrive. 
 
