--- a/README.Rmd
+++ b/README.Rmd
@@ -70,7 +70,7 @@ While these are the most critical decisions, there are a number of additional th
 
 To provide an experimental example, suppose you want to know if individuals with diabetes have altered hormonal profiles. To answer this question, you carry out an experiment in which blood is drawn from 20 individuals with diabetes as well as 20 healthy controls. This blood was used to measure blood levels for 50 different hormones. These measurements would comprise your first 'kind' of data (see #3 above). You have also collected demographic information from the patients including their age, sex, BMI, treatment, and diagnosis (your second "kind" of data). For this example, your first table or spreadsheet would include the measurements for the 20 different hormones. This would have 41 rows (a row for the name of the measured hormones at top and then one row for each of the 40 individuals in your study) and 51 columns (one for `PatientID` and then one for each measurement) (**Figure 1A**). You would have another table or spreadsheet that contains the demographic information. It would have six columns (`PatientID`, `Age`, `Sex`, `BMI`, `CollectionDate`,`Diagnosis`) and 41 rows (a row with variable names, then one row for each patient) (**Figure 1B**).
 
-With regards to the formatting of these data, if you are sharing your data with the collaborator in Excel, the tidy data should be in one Excel file per table. They should not have multiple worksheets, no macros should be applied to the data, and no cells should be highlighted. Alternatively, the data could be shared in either a CSV [@_comma-separated_2017] or TAB-delimited [@_tab-separated_2017] text file. Caution should always be taken when reading CSV files into Excel as it can sometimes lead to non-reproducible handling of date variables, time variables, and variables that Excel incorrectly assumes are date or time variables [@zeeberg_mistaken_2004]. For example, Excel incorrectly assumes the gene `SEPT9` is the date `Sept-9` due to  default date format conversions. Floating-point format conversions cause similar problems. To avoid these issues, use ISO 8601 [@_iso_2017] guidelines when coding date and time variables. (See Box 1).
+With regards to the formatting of these data, if you are sharing your data with the collaborator in Excel, the tidy data should be in one Excel file per table. They should not have multiple worksheets, no macros should be applied to the data, and no cells should be highlighted. Alternatively, the data could be shared in either a CSV [@_comma-separated_2017] or TAB-delimited [@_tab-separated_2017] text file. Caution should always be taken when reading CSV files into Excel as it can sometimes lead to non-reproducible handling of date variables, time variables, and variables that Excel incorrectly assumes are date or time variables [@zeeberg_mistaken_2004]. For example, Excel incorrectly assumes the gene `SEPT9` is the date `Sept-9` due to  default date format conversions. Floating-point format conversions cause similar problems. To avoid these issues, use ISO 8601 [@_iso_2017] guidelines when coding date and time variables. (See Box 1). Any time data is being formatted, the tidier must be extremely careful that no unintended alterations have been made. Spot checking data after tidying, which includes, but is not limited to, ensuring the correct number of columns and rows are present and that column labels are accurate and consistent across spreadsheets, is crucial. 
 
 ### 2.3 The code book
 
